--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                                    src="../media/pictures/Build your dream 3.jpg">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
@@ -28,9 +28,9 @@
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }}</p>
-                            
+                            <p class="card-text text-muted h6">{{ post.created_on }} <i class="far fa-heart"></i>
+                                {{ post.number_of_likes }} <i class="far fa-comments"></i>
+                                {{ total_comments }} </p>                             
                         </div>
                     </div>
                 </div>
