--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,8 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by Sandor Kisgyorgy</p>
-        <p class="m-0 text-center text-white">Follow me: <i class="fab fa-facebook-square ms-3"></i>            
-            <i class="fab fa-instagram-square ms-3"></i>            
+        <p class="m-0 text-center text-white">Follow me: <a href="https://facebook.com"><i class="fab fa-facebook-square ms-3"></i></a>            
+            <a href="https://instagram.com"><i class="fab fa-instagram-square ms-3"></i></a></p>                    
     </footer>
     <script>
         setTimeout(function() {
