--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="../media/pictures/Build your dream 3.jpg">
+                                    src="../assets/images/Build your dream 3.jpg">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
@@ -29,8 +29,7 @@
                             </a>
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on }} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} <i class="far fa-comments"></i>
-                                {{ total_comments }} </p>                             
+                                {{ post.number_of_likes }} <i class="far fa-comments"></i> {{ post_list.comments.count }} </p>                                                  
                         </div>
                     </div>
                 </div>
