Add text message to the else part if a post is commented.

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,6 +97,9 @@
                     Your comment is awaiting approval
                 </div>
                 {% else %}
+                <div class="submit_empty_comment_form">
+                    You cannot submit empty comment form.
+                </div>
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
