--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                             </a>
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on }} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} </p>                                                  
+                                {{ post.number_of_likes }} <i class="far fa-comments"></i> {{ total_comments }}</p>                                                  
                         </div>
                     </div>
                 </div>
