--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,7 +97,7 @@
                     Your comment is awaiting approval
                 </div>
                 {% else %}
-                <div class="submit_empty_comment_form">
+                <div class="submit_empty_comment_form" role="alert">
                     You cannot submit empty comment form.
                 </div>
                 {% if user.is_authenticated %}
