Update the allauth part of app and correct spelling mistakes.

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -27,7 +27,6 @@
         <div class="col card mb-4  mt-3 left  top">
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
-                <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text ">
                     {{ post.content | safe }}
                 </p>
@@ -75,10 +74,10 @@
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
-                        <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
+                        <!-- The Site User's name goes here. -->
                         {{ comment.name }}
                         <span class=" text-muted font-weight-normal">
-                            <!-- The comment's created date goes here -->
+                            <!-- The date when the comment was created -->
                             {{ comment.created_on }}
                         </span> wrote:
                     </p>
