Build the error message in post_detail.html for submit an empty form.

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -99,6 +99,7 @@
                 <div class="submit_empty_comment_form" role="alert">
                     You cannot submit empty comment form.
                 </div>
+                {% endif %}
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
