--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,8 @@
                             </a>
                             <hr />
                             <p class="card-text text-muted h6">{{ post.created_on }} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} <i class="far fa-comments"></i> {{ post.commented }}</p>                                                  
+                                {{ post.number_of_likes }} <strong class="text-secondary"><i class="far fa-comments"></i>
+                                    {{ total_comments }}</strong></p>                                                  
                         </div>
                     </div>
                 </div>
