Create a message for successful approval.

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -97,7 +97,12 @@
                     Your comment is awaiting approval
                 </div>
                 {% else %}
-                
+                {% endif %}
+                {% if approved %}
+                <div class="alert alert-success" role="alert">
+                    Your comment was approved
+                </div>
+                {% else %}
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
@@ -107,6 +112,7 @@
                     {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
+                
                 {% endif %}
                 {% endif %}
             </div>
