--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,10 @@
                                 <p class="card-text">{{ post.excerpt }}</p>
                             </a>
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on }} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} <strong class="text-secondary"><i class="far fa-comments"></i>
-                                    {{ total_comments }}</strong></p>                                                  
+                            <p class="card-text text-muted h6"> {{ post.created_on }} <i class="far fa-heart"></i>
+                                {{ post.number_of_likes }} </p>
+                            <p class="text-secondary"> {{ comments.created_on }} <i class="far fa-comments"></i>
+                                    {{ post.commented }} </p>                                                 
                         </div>
                     </div>
                 </div>
