--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,7 @@
                             </a>
                             <hr />
                             <p class="card-text text-muted h6"> {{ post.created_on }} <i class="far fa-heart"></i>
-                                {{ post.number_of_likes }} </p>
-                            <p class="text-secondary"> {{ comments.created_on }} <i class="far fa-comments"></i>
-                                    {{ post.commented }} </p>                                                 
+                                {{ post.number_of_likes }} <i class="far fa-comments"></i> {{ comments | length}} </p>                                                                            
                         </div>
                     </div>
                 </div>
