--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -72,6 +72,7 @@
             <h3>Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
+                {{ comments | length}}
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
@@ -84,6 +85,7 @@
                     </p>
                     <!-- The body of the comment goes before the | -->
                     {{ comment.body | linebreaks }}
+                   
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
