--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
                                 <img class="card-img-top"
-                                    src="../assets/images/Build your dream 3.jpg">
+                                    src="../assets/images/build your dream 3.jpg">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
