--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -30,6 +30,7 @@
                 <!-- Use the | safe filter inside the template tags -->
                 <p class="card-text ">
                     {{ post.content | safe }}
+                    <p class="text-secondary"> <i class="fa-light fa-pencil"></i> <i class="fa-regular fa-trash-can"></i></p>
                 </p>
                 <div class="row">
 
@@ -71,8 +72,7 @@
         
         <div class="col-md-8 card mb-4  mt-3 ">
             <h3>Comments:</h3>
-            <div class="card-body">
-                
+            <div class="card-body">                
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
@@ -85,11 +85,11 @@
                         </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}
-                   
-                </div>
+                    {{ comment.body | linebreaks }}                    
+                </div>                
                 <!-- Our for loop ends here -->
                 {% endfor %}
+                <p class="text-secondary"> <i class="fa-light fa-pencil"></i> <i class="fa-regular fa-trash-can"></i></p> 
             </div>
         </div>
         <div class="col-md-4 card mb-4  mt-3 ">
@@ -116,8 +116,8 @@
                 </form>
                 
                 {% endif %}
-                {% endif %}                
-            </div>
+                {% endif %}                              
+            </div>            
         </div>
     </div>
 </div>
