--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -85,11 +85,17 @@
                         </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
-                    {{ comment.body | linebreaks }}                    
+                    {{ comment.body | linebreaks }}
+                    <form method="comments">
+                        {% csrf_token %}
+                        <button type="delete" class="btn btn-delete btn-lg">Delete</button>
+                        <a href="/delete-comment/{{comment.name}}"></a>
+                        <button type="update" class="btn btn-update btn-lg">Update</button>
+                        <a href="/update-comment/{{comment.name}}"></a>
+                    </form>                    
                 </div>                
                 <!-- Our for loop ends here -->
-                {% endfor %}
-                <p class="text-secondary"> <i class="fa-light fa-pencil"></i> <i class="fa-regular fa-trash-can"></i></p> 
+                {% endfor %}                
             </div>
         </div>
         <div class="col-md-4 card mb-4  mt-3 ">
@@ -119,6 +125,7 @@
                 {% endif %}                              
             </div>            
         </div>
+        
     </div>
 </div>
 
